--- a/Web3d/FbxAni.html
+++ b/Web3d/FbxAni.html
@@ -50,14 +50,14 @@
     <div id="close"></div>
 </div>
 </body>
-<script src="/lib/three.min.js"></script>
-<script src="/lib/inflate.min.js"></script>
-<script src="/lib/FBXLoader.js"></script>
-<script src="/lib/OrbitControls.js"></script>
-<script src="/lib/stats.min.js"></script>
-<script src="/lib/dat.gui.min.js"></script>
-<script src="/lib/Detector.js"></script>
-<script src="/lib/tween.js"></script>
+<script src="lib/three.min.js"></script>
+<script src="lib/inflate.min.js"></script>
+<script src="lib/FBXLoader.js"></script>
+<script src="lib/OrbitControls.js"></script>
+<script src="lib/stats.min.js"></script>
+<script src="lib/dat.gui.min.js"></script>
+<script src="lib/Detector.js"></script>
+<script src="lib/tween.js"></script>
 <script>
     var renderer, camera, scene, gui, light, stats, controls, meshHelper, mixer, dancemesh, action,omeshHelper, omixer, oaction, music;
     var index = 0;
