--- a/ZhSWH5/subpages/row01col02.html
+++ b/ZhSWH5/subpages/row01col02.html
@@ -64,7 +64,7 @@
                   <div class="iconFm" onclick="OnClickIcon(2);">
                   </div>
                   <div class="iconitem">
-                    <div class="icon" style="background-image: url(../image/row01col02/02.png);"></div>
+                    <div class="icon" style="background-image: url(image/row01col02/02.png);"></div>
                     <div class="middle-box">
                       <div class="iconword">
                         <p>利贞皇帝礼佛图</p>
@@ -76,7 +76,7 @@
                   <div class="iconFm" onclick="OnClickIcon(3);">
                   </div>
                   <div class="iconitem">
-                    <div class="icon" style="background-image: url(../image/row01col02/03.png);"></div>
+                    <div class="icon" style="background-image: url(image/row01col02/03.png);"></div>
                     <div class="middle-box">
                       <div class="iconword">
                         <p>金刚力士图</p>
@@ -88,7 +88,7 @@
                   <div class="iconFm" onclick="OnClickIcon(4);">
                   </div>
                   <div class="iconitem">
-                    <div class="icon" style="background-image: url(../image/row01col02/04.png);"></div>
+                    <div class="icon" style="background-image: url(image/row01col02/04.png);"></div>
                     <div class="middle-box">
                       <div class="iconword">
                         <p>释迦降魔图</p>
@@ -149,7 +149,7 @@
                   <div class="iconFm" onclick="OnClickIcon(9);">
                   </div>
                   <div class="iconitem">
-                    <div class="icon" style="background-image: url(../image/row01col02/09.png);"></div>
+                    <div class="icon" style="background-image: url(image/row01col02/09.png);"></div>
                     <div class="middle-box">
                       <div class="iconword">
                         <p>维摩诘辩经图</p>
@@ -185,7 +185,7 @@
                   <div class="iconFm" onclick="OnClickIcon(12);">
                   </div>
                   <div class="iconitem">
-                    <div class="icon" style="background-image: url(../image/row01col02/12.png);"></div>
+                    <div class="icon" style="background-image: url(image/row01col02/12.png);"></div>
                     <div class="middle-box">
                       <div class="iconword">
                         <p>云南福星阿
@@ -236,7 +236,7 @@
                   <div class="iconFm" onclick="OnClickIcon(16);">
                   </div>
                   <div class="iconitem">
-                    <div class="icon" style="background-image: url(../image/row01col02/16.png);"></div>
+                    <div class="icon" style="background-image: url(image/row01col02/16.png);"></div>
                     <div class="middle-box">
                       <div class="iconword">
                         <p>经幢及十六
@@ -400,7 +400,7 @@
             index = (i + 1).toString();
           dom += "<div class=\"swiper-slide\" data-swiper-slide-index=\"" + i + "\">" +
             "<div class=\"iconFm\">\</div>\<div class=\"iconitem\"><div " +
-            "class=\"icon\" style=\"background-image: url(../image/row01col02/" + index + ".png);\">" +
+            "class=\"icon\" style=\"background-image: url(image/row01col02/" + index + ".png);\">" +
             "</div><div class=\"iconword\"><p>" + CardNames[i] + "</p></div></div></div>";
         }
         $("#iconwrapper").html(dom);
