--- a/ZhSWH5/scrollinfo.html
+++ b/ZhSWH5/scrollinfo.html
@@ -37,7 +37,7 @@
     <div class="swiper-wrapper">
       <div class="swiper-slide" aria-page="nested">
         <div class="swiper-container swiper-container-in">
-          <div class="parallax-bg" style="background-image:url(../image/bg01.jpg)" data-swiper-parallax="-23%"></div>
+          <div class="parallax-bg" style="background-image:url(image/bg01.jpg)" data-swiper-parallax="-23%"></div>
           <div id="Initwrapper" class="swiper-wrapper">
             <div class="swiper-slide" aria-page="row01col01"></div>
             <div class="swiper-slide" aria-page="row01col02"></div>
